- Error/Warning/Debug messages can write to the PHP's error log with params.php's variables $errorMessageLogging,
  $warningMessageLogging and $debugMessageLogging.
- The operation logging feature can customize for extending fields with INTERMediator\DB\Support\OperationLogExtension.
  Also $recordingOperations and $accessLogExtensionClass can be defined in params.php file.
- [BUG FIX] The lookup feature was not fully efficient, and refactored them.
- [BUG FIX] When checkbox set to off, the message which someone modified showed unexpectedly.
- [BUG FIX] After moving from list to detail and back to list page, paging position wasn't retrieve and show the
  list from the start of it.
- [BUG FIX] The definition file editor didn't support some keys added from Ver.8 or whatever.

Ver.9 (January 31, 2022)
- [Important] Native upser authentication and LDAP direct supporting was dropped. If you want to LDAP server
  to authenticate user, the SAML is the replacement. SAML IdP can integrate with LDAP server as a identifying users.
  Dropped "php-bcmath" and "php-ldap" from the composer.json, and "jsencrypt" from package.json.
- [INFO] The /spec/Manual-Test directory is created on this repository. The SAML-Test.md file show the result of the
  manual test with SAML features.

- IMLibUI.revertOnValidationError can control to retrieve the original value or not, after validation error.
  The default value is true, and it means retrieve it.
- DB\Logger class accept the setWarningMessage() method, and it shows the message with the alert() on client.
  Also INTERMediatorLog.warningMessagePrevent can stop the alert box with setting to true, and the default is false.
- In case of Messaging errors, the Warning Messages are set instead of error messages.
- On the post only mode, if there is no data to send, the communication is going to prevent.
  If IMLibUI.postOnlyNoRecordPrevent set to false, it doesn't prevent in case of no data.