@@ -1,0 +1,65 @@
+<!DOCTYPE html>
+<!--
+/*
+ * INTER-Mediator
+ * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
+ * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
+ *
+ * INTER-Mediator is supplied under MIT License.
+ * Please see the full license for details:
+ * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
+ */  -->
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>INTER-Mediator - Sample - Search for Debugging/MySQL</title>
+    <script type="text/javascript" src="lcconditions.php"></script>
+    <script>
+      INTERMediatorOnPage.doBeforeConstruct = function () {
+        INTERMediatorLog.suppressDebugMessageOnPage = true
+        INTERMediator.lcConditionsOP1AND = true;
+        INTERMediator.lcConditionsOP2AND = false;
+        INTERMediator.lcConditionsOP3AND = 'AND';
+      }
+    </script>
+</head>
+<body>
+<table >
+    <thead>
+    <tr>
+        <td colspan="9">
+            <input type="text" data-im="_@condition:testtable:num1:>=">
+            <input type="text" data-im="_@condition:testtable:num2:<=">
+            <input type="text" data-im="_@condition:testtable:vc1,vc2,vc3:*match*">
+            <button data-im="_@update:testtable">検索</button>
+        </td>
+    </tr>
+    <tr>
+        <th>num1</th>
+        <th>num2</th>
+        <th>num3</th>
+        <th>vc1</th>
+        <th>vc2</th>
+        <th>vc3</th>
+        <th>text1</th>
+        <th>text2</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td><input type="text" data-im="testtable@num1"></td>
+        <td><input type="text" data-im="testtable@num2"></td>
+        <td><input type="text" data-im="testtable@num3"></td>
+        <td><input type="text" data-im="testtable@vc1"></td>
+        <td><input type="text" data-im="testtable@vc2"></td>
+        <td><input type="text" data-im="testtable@vc3"></td>
+        <td><input type="text" data-im="testtable@text1"></td>
+        <td><input type="text" data-im="testtable@text2"></td>
+        <td></td>
+    </tr>
+    </tbody>
+</table>
+
+</body>
+</html>
