@@ -51,6 +51,8 @@
     <a href="Sample_webpage/fileuploadMulti_MySQL.html">MultiFile upload</a>
     <br>
     <a href="Sample_forDebugging/datatest.html">Data test</a>
+    <br>
+    <a href="Sample_forDebugging/lcconditions.html">Local Context Conditions</a>
 </ul>
 <h3>FileMaker Server</h3>
 <ul>
