@@ -25,6 +25,9 @@ Ver.10 (In Development)
   $warningMessageLogging and $debugMessageLogging.
 - The operation logging feature can customize for extending fields with INTERMediator\DB\Support\OperationLogExtension.
   Also $recordingOperations and $accessLogExtensionClass can be defined in params.php file.
+- Local Context conditions (i.e.:data-im="_@condition:...") can control operations of the generated sql statement with
+  INTERMediator.lcConditionsOP1AND, ..OP2.. and ..OP3.. properties.
+  See https://inter-mediator.info/ja/for-developers/bindingfunc.html
 - [BUG FIX] The lookup feature was not fully efficient, and refactored them.
 - [BUG FIX] When checkbox set to off, the message which someone modified showed unexpectedly.
 - [BUG FIX] After moving from list to detail and back to list page, paging position wasn't retrieve and show the
